added footer section partial

--- a/index.html
+++ b/index.html
@@ -79,5 +79,17 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-contents">
+          <h1 class="footer-heading">We always make sure to provide you with good food</h1>
+          <p class="footer-description">Don’t miss a thing! Subscribe to our newsletter</p>
+          <hr />
+          <p class="follow">Follow Us On</p>
+          <hr />
+          <img src="" alt="">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
