--- a/index.html
+++ b/index.html
@@ -78,16 +78,45 @@
           </div>
         </div>
       </section>
+      <section class="about-container">
+        <div class="img-container">
+          <img src="./images/foods.png" alt="" />
+        </div>
+        <div class="content-container">
+          <div class="about-contents">
+            <div id="description-container" class="footer-container">
+              <div class="footer-contents">
+                <h1 class="footer-heading">
+                  We always make sure to provide <br />
+                  you with good food
+                </h1>
+                <p class="footer-description">
+                  Don’t miss a thing! Subscribe to our newsletter
+                </p>
+                <hr />
+                <p id="follow-me" class="follow">Follow Us On</p>
+                <hr />
+                <img src="" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-container">
         <div class="footer-contents">
-          <h1 class="footer-heading">We always make sure to provide you with good food</h1>
-          <p class="footer-description">Don’t miss a thing! Subscribe to our newsletter</p>
+          <h1 class="footer-heading">
+            We always make sure to provide <br />
+            you with good food
+          </h1>
+          <p class="footer-description">
+            Don’t miss a thing! Subscribe to our newsletter
+          </p>
           <hr />
           <p class="follow">Follow Us On</p>
           <hr />
-          <img src="" alt="">
+          <img src="" alt="" />
         </div>
       </div>
     </footer>
